--- a/Emby.yaml
+++ b/Emby.yaml
@@ -3,30 +3,10 @@ emby-rule:
   - DOMAIN-SUFFIX,cf.jmsooo.com
   - DOMAIN-SUFFIX,misakaf.org
   - DOMAIN-SUFFIX,4837.misakaf.org
-  - DOMAIN-SUFFIX,catfishemby.club
-  - DOMAIN-SUFFIX,infinity.top
-  - DOMAIN-SUFFIX,auto.dnslink.ml
-  - DOMAIN-SUFFIX,789.123456.al 
-  - DOMAIN-SUFFIX,film.goodisp.org
+  - DOMAIN-SUFFIX,cc.coemn.com
   - DOMAIN-KEYWORD,emby
-  - DOMAIN-KEYWORD,misty.ltd
   - DOMAIN-KEYWORD,jmsooo
-  - DOMAIN-KEYWORD,media.nijigem
-  - DOMAIN-KEYWORD,aaa.ax
-  - DOMAIN-KEYWORD,mjjemby
   - DOMAIN-KEYWORD,misakaf
   - DOMAIN-KEYWORD,polo
-  - DOMAIN-KEYWORD,infinityfly
-  - DOMAIN-KEYWORD,nebula
-  - DOMAIN-KEYWORD,ju.dog
-  - DOMAIN-KEYWORD,singularity
-  - DOMAIN-KEYWORD,freetz
-  - DOMAIN-KEYWORD,foxcoo
-  - DOMAIN-KEYWORD,bili.rip
-  - DOMAIN-KEYWORD,studyfun
-  - DOMAIN-KEYWORD,shuipo.lol
-  - DOMAIN-KEYWORD,zox.show
-  - DOMAIN-KEYWORD,acemby
-  - DOMAIN-KEYWORD,embyplus
   - IP-CIDR,202.61.237.28
   - IP-CIDR,138.2.9.40
